fix right column on tablet

--- a/src/components/ItemDetailsCard/ItemDetailsCard.scss
+++ b/src/components/ItemDetailsCard/ItemDetailsCard.scss
@@ -93,6 +93,7 @@
     @include tablet {
       flex: 1;
       margin-left: 2.5rem;
+      padding-top: 0;
     }
   }
   &__description {
